--- a/Projects/GoogleSearch/VSearch.html
+++ b/Projects/GoogleSearch/VSearch.html
@@ -1,114 +1,187 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="PCM Final Project - Visual Search" />
-        <meta name="keywords" content="HTML5, CSS, JavaScript" />
-        <meta name="author" content="Jorge Silva - A44615" />
-        <title>
-            Visual Search
-        </title>
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
-        <link rel="stylesheet" href="css/style.css" />
-        <script src="https://kit.fontawesome.com/1cfb1a8cbd.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <!-- Header -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navy">
-            <div class="container">
-                <a class="navbar-brand" href="#">Visual Search</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <meta name="description" content="PCM Final Project - Visual Search"/>
+    <meta name="keywords" content="HTML5, CSS, JavaScript"/>
+    <meta name="author" content="Jorge Silva - A44615"/>
+    <title>
+        Visual Search
+    </title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"/>
+    <!--<link rel="stylesheet" href="css/style.css" />-->
+    <link rel="stylesheet" href="css/styleF.css"/>
+    <link rel="stylesheet" href="css/colours.css"/>
+    <link rel="stylesheet" href="css/lightbox.css"/>
+    <script src="https://kit.fontawesome.com/1cfb1a8cbd.js" crossorigin="anonymous"></script>
+</head>
+<body>
+<!-- Information MODAL -->
+<div id="modalInfo" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">WARNING</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ml-auto">
-                        <span id="mainNav"></span>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#" onclick="setActiveSearch(this)">Imagens</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#" onclick="setActiveSearch(this)">Videos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#" onclick="setActiveSearch(this)">Audio</a>
-                        </li>
-                    </ul>
-                </div>
             </div>
-        </nav>
-        <!-- /Header -->
-        <!-- stuff -->
-
-        <div class="container align-items-center">
-            <input id="searchValue" type="textarea" class="form-control myForm" placeholder="Pesquisar Imagens..." />
-            <!--
-            <div class="input-group mb-3">
-                <input id="searchValue" type="search" class="form-control" placeholder="Pesquisar Imagens..." aria-label="Pesquisar Imagens..." aria-describedby="basic-addon2" />
-                <div class="input-group-append">
-                    <button class="btn btn-outline-secondary" type="button" onclick=""><i class="fas fa-search"></i></button>
-                </div>
+            <div class="modal-body">
+                <h5>Information</h5>
+                <p>Welcome, I'm sorry about this "bump" but it's required so you can enjoy this on its fullest, please
+                    take a close look at the following steps.</p>
+                <p><strong>Last Update: </strong>04/01/2020</p>
+                <hr>
+                <h5>First Run</h5>
+                <p>So this project uses your <strong>LocalStorage</strong> as a way to simulate a database. So in order
+                    to work I ask you kindly to press the <strong>Load</strong> button.</p>
+                <p>Don't worry, it may seems the web-site is blocked but you can see it working if you press
+                    <strong>F12</strong>.</p>
+                <hr>
+                <h5>Usual Run / Update</h5>
+                <p>Seems your not a newcomer, so just press the <strong>Close</strong> button and have fun or use <strong>Load</strong> if you want to refresh the database.</p>
+                <hr>
+                <h5>Clearing LocalStorage</h5>
+                <p>This isn't a one-time project, I'll update some features into this one.<br>
+                    In case something breaks and the "update" doesn't work clear your <strong>LocalStorage</strong>.<br>
+                    If you don't know how to do it just use the following links!
+                </p>
+                <p><a href="https://developers.google.com/web/tools/chrome-devtools/storage/localstorage">Google
+                    Chrome</a></p>
+                <p><a href="https://support.mozilla.org/en-US/kb/storage">FireFox</a></p>
+                <p><a href="https://docs.microsoft.com/en-us/microsoft-edge/devtools-guide/storage">Edge</a></p>
+                <p><a href="https://dev.opera.com/articles/web-storage/">Opera</a></p>
             </div>
-          -->
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" onclick="setupLS(true)" data-dismiss="modal">Load</button>
+                <button type="button" class="btn btn-secondary" onclick="setupLS(false)" data-dismiss="modal">Close</button>
+            </div>
         </div>
-
-        <!-- /stuff -->
-        <!-- Optional JavaScript -->
-        <script src="js/Image_Processing.js"></script>
-        <script src="js/XML_Database.js"></script>
-        <script src="js/ISearchEngine.js"></script>
-        <script src="js/ISearchEngine_Manager.js"></script>
-        <script src="js/myScript.js"></script>
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    </body>
-</html>
-
-<!--<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="description" content="PCM Final Project - Visual Search" />
-    <meta name="keywords" content="HTML5, CSS, JavaScript" />
-    <meta name="author" content="Rui Jesus" />
-    <meta charset="UTF-8" />
-    <title>Visual Search</title>
-    
-    
-    <script src="js/Image_Processing.js"></script>
-    <script src="js/XML_Database.js"></script>
-    <script src="js/ISearchEngine.js"></script>
-    <script src="js/ISearchEngine_Manager.js"></script>
-  </head>
-  <body>
-    <div class="cardHolder">
-      hey
     </div>
-    ----
-<header id="header1"></header>
+</div>
+<!-- /Informatiion Modal -->
+<div class="container">
+    <div id="alert" class="alert alert-info" role="alert">
+        Atenção: Não sei o que procurar :(
+    </div>
+</div>
+<div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-dark" id="navy">
+        <div class="container">
+            <a class="navbar-brand h2" href="#">Visual Search</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                    aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <span id="mainNav"></span>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#" onclick="setActiveSearch(this)">Imagens</a>
+                        <div class="underline"></div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.youtube.com/" onclick="setActiveSearch(this)">Videos</a>
+                        <div class="underline"></div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.spotify.com/" onclick="setActiveSearch(this)">Audio</a>
+                        <div class="underline"></div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</div>
 
-<section id="query">
+<div id="searchContent" class="container-middle">
+    <div class="content">
+        <div class="input-group mb-3 shadow-lg">
+            <div class="input-group-prepend">
+                <span class="btn btn-secondary" onclick="showOptions()"><i id="searchIcon"
+                                                                           class="fa fa-angle-double-down"></i></span>
+            </div>
+            <input type="search" id="searchValue" class="form-control" aria-label="Default"
+                   placeholder="Procurar Imagens..."/>
+            <div class="input-group-append">
+                <button class="btn btn-secondary" onclick="normalSearch()" type="button">Procurar</button>
+            </div>
+        </div>
+        <canvas id="dropCanvas" class="dropCanvas" ondrop="" ondragover="" style="display: none;"></canvas>
+        <div id="sOptions" class="moreOption shadow">
+            <span>Escolha uma Cor:</span>
+            <div class="container align-items-center">
+                <div class="noColor" onclick="setColorSearch('none')"></div>
+                <div class="circle red" onclick="setColorSearch('red')"></div>
+                <div class="circle orange" onclick="setColorSearch('orange')"></div>
+                <div class="circle yellow" onclick="setColorSearch('yellow')"></div>
+                <div class="circle green" onclick="setColorSearch('green')"></div>
+                <div class="circle blue-green" onclick="setColorSearch('Blue-green')"></div>
+                <div class="circle blue" onclick="setColorSearch('blue')"></div>
+                <div class="circle purple" onclick="setColorSearch('purple')"></div>
+                <div class="circle pink" onclick="setColorSearch('pink')"></div>
+                <div class="circle white" onclick="setColorSearch('white')"></div>
+                <div class="circle grey" onclick="setColorSearch('grey')"></div>
+                <div class="circle black" onclick="setColorSearch('black')"></div>
+                <div class="circle brown" onclick="setColorSearch('brown')"></div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div id="resultsHolder" class="resultsHolder shadow">
+        <div id="results">
 
-</section>
+        </div>
+    </div>
+</div>
 
-<section id="tools">
+<!-- /Display Results -->
+<canvas id="hidden" width="2000" height="2000" style="display: none"></canvas>
+<!-- Optional JavaScript -->
+<script src="js/Image_Processing.js"></script>
+<script src="js/XML_Database.js"></script>
+<script src="js/ISearchEngine.js"></script>
+<script src="js/ISearchEngine_Manager.js"></script>
+<script src="js/myScript.js"></script>
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+<script src="js/lightbox.js"></script>
+<script>
+    var categories = ["beach", "birthday", "face", "indoor", "manmade/artificial", "manmade/manmade", "manmade/urban", "marriage", "nature", "no_people", "outdoor", "party", "people", "snow"];
 
-</section>
 
-<section id="visualizacao"  >
-    <canvas id="canvas" width="1100" height="1100">
-        Your browser doesn't recognize the canvas element
-    </canvas>
-</section>
+    window.onload = showInfo();
 
-<footer>
-</footer>
+    function showInfo() {
+        $('#modalInfo').modal({
+            backdrop: 'static',
+            keyboard: false
+        })
+    }
 
+    function setupLS(value) {
+        if (value) {
+            main(true);
+        } else {
+            main(false);
+        }
+    }
 
-<script> /*window.onload = main(); */</script>
-  </body>
-</html> -->
+    autocomplete(document.getElementById("searchValue"), categories);
+</script>
+</body>
+</html>
