--- a/Projects/GoogleSearch/VSearch.html
+++ b/Projects/GoogleSearch/VSearch.html
@@ -35,12 +35,13 @@
                 <h5>Information</h5>
                 <p>Welcome, I'm sorry about this "bump" but it's required so you can enjoy this on its fullest, please
                     take a close look at the following steps.</p>
+                <strong>IMPORTANT NOTE: This project doesn't run on Mobile... sorry about that :(</strong>
                 <p><strong>Last Update: </strong>04/01/2020</p>
                 <hr>
                 <h5>First Run</h5>
-                <p>So this project uses your <strong>LocalStorage</strong> as a way to simulate a database. So in order
-                    to work I ask you kindly to press the <strong>Load</strong> button.</p>
-                <p>Don't worry, it may seems the web-site is blocked but you can see it working if you press
+                <p>So this project uses <strong>LocalStorage</strong> as a way to simulate a database. So in order
+                    to work I kindly ask you to press the <strong>Load</strong> button.</p>
+                <p>Don't worry, the site may appear to be blocked, but you can see it working if you press
                     <strong>F12</strong>.</p>
                 <hr>
                 <h5>Usual Run / Update</h5>
@@ -48,7 +49,7 @@
                 <hr>
                 <h5>Clearing LocalStorage</h5>
                 <p>This isn't a one-time project, I'll update some features into this one.<br>
-                    In case something breaks and the "update" doesn't work clear your <strong>LocalStorage</strong>.<br>
+                    In case something breaks and the "update" doesn't work, clear your <strong>LocalStorage</strong>.<br>
                     If you don't know how to do it just use the following links!
                 </p>
                 <p><a href="https://developers.google.com/web/tools/chrome-devtools/storage/localstorage">Google
