--- a/Projects/GoogleSearch/VSearch.html
+++ b/Projects/GoogleSearch/VSearch.html
@@ -155,9 +155,9 @@
         </div>
     </div>
 </div>
-<div class="container">
+<div class="container-fluid">
     <div id="resultsHolder" class="resultsHolder shadow">
-        <div id="results">
+        <div id="results" class="d-flex flex-wrap">
 
         </div>
     </div>
