--- a/Projects/GoogleSearch/VSearch.html
+++ b/Projects/GoogleSearch/VSearch.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/styleF.css"/>
     <link rel="stylesheet" href="css/colours.css"/>
     <link rel="stylesheet" href="css/lightbox.css"/>
-    <!--<script src="https://kit.fontawesome.com/1cfb1a8cbd.js" crossorigin="anonymous"></script>-->
+    <script src="https://kit.fontawesome.com/1cfb1a8cbd.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <!-- Information MODAL -->
