--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link rel="preload" href="./assets/videos/vid1.mp4" as="video" type="video/mp4">
+    <link rel="preload" href="./assets/videos/intro.mp4" as="video" type="video/mp4">
     <link rel="preload" href="./assets/videos/vid2.mp4" as="video" type="video/mp4">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Playfair+Display:400,400i,700,700i,900,900i"
           rel="stylesheet">
@@ -81,14 +81,16 @@
             <div class="carousel-inner" role="listbox">
                 <div class="carousel-item active movie-filter">
                     <video class="video-fluid " autoplay loop muted>
-                        <source src="./assets/videos/vid3.mp4" type="video/mp4"/>
+                        <source src="./assets/videos/intro.mp4" type="video/mp4"/>
                     </video>
                 </div>
+                <!--
                 <div class="carousel-item movie-filter">
                     <video class="video-fluid " autoplay loop muted>
                         <source src="./assets/videos/vid1.mp4" type="video/mp4"/>
                     </video>
                 </div>
+            -->
                 <div class="header-bh">
                     <h1 class="font-weight-light text-white">Welcome</h1>
                     <p class="lead">May the scroll be with you</p>
