--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                         <div class="col">
                                             <h3 class="name">Web Development Projects</h3>
                                             <p class="description">
-                                                <a href="#" target="_blank">ISEL - Portfolio<br></a>
+                                                <a href="https://jcsilvapt.github.io/Projects/Portfolio/index.html" target="_blank">ISEL - Portfolio<br></a>
                                                 <a href="https://jcsilvapt.github.io/Projects/BlackJack/blackjack_oop.html" target="_blank">ISEL - Blackjack<br></a>
                                                 <a href="https://jcsilvapt.github.io/Projects/WebForms/" target="_blank">ISEL - WebForms<br></a>
                                                 <a href="https://jcsilvapt.github.io/Projects/GoogleSearch/VSearch.html" target="_blank">ISEL - GoogleSearch<br></a>
