--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
                             <ion-icon name="logo-facebook"></ion-icon>
                         </a>
                     </div>
+                    <div class="float-left">
+                        <a target="_blank" href="https://www.zaask.pt/user/jorgemcs14"><img src="https://www.zaask.pt/widget?user=643561&widget=pro-findme" alt="" /></a>
+                    </div>
                 </div>
             </div>
 
