--- a/index.html
+++ b/index.html
@@ -73,9 +73,10 @@
                         <a href="https://www.facebook.com/jorge.silva.10690/" target="_blank">
                             <ion-icon name="logo-facebook"></ion-icon>
                         </a>
+                        <a style="float: left; margin-bottom: 20px;" target="_blank" href="https://www.zaask.pt/user/jorgemcs14"><img src="https://www.zaask.pt/widget?user=643561&widget=pro-findme" alt="" /></a>
                     </div>
-                    <div class="float-left">
-                        <a target="_blank" href="https://www.zaask.pt/user/jorgemcs14"><img src="https://www.zaask.pt/widget?user=643561&widget=pro-findme" alt="" /></a>
+                    <div>
+                        
                     </div>
                 </div>
             </div>
